(library
 (name x509)
 (public_name x509)
 (wrapped false)
 (modules_without_implementation z)
 (private_modules asn_grammars registry authenticator certificate validation
                  public_key private_key crl distinguished_name algorithm
                  extension pem signing_request general_name z)
 (flags (:standard -safe-string -no-keep-locs))
 (libraries asn1-combinators rresult fmt ptime cstruct nocrypto gmap
            domain-name))

(rule (copy %{lib:zarith:z.mli} z.mli))
